--- a/app/views/subjects/index.html.haml
+++ b/app/views/subjects/index.html.haml
@@ -11,7 +11,7 @@
       %th
 
   %tbody
-    - @subjects.each do |subject|
+    - subjects.each do |subject|
       %tr
         %td= subject.name
         %td= subject.short_name
