--- a/app/views/layouts/_navigation_links.html.haml
+++ b/app/views/layouts/_navigation_links.html.haml
@@ -4,6 +4,6 @@
 - else
   %li= link_to 'Sign in', new_user_session_path
   %li= link_to 'Sign up', new_user_registration_path
-- if user_signed_in?
-  %li= link_to 'Users', users_path
-  %li= link_to 'Subjects', subjects_path
+%li= link_to 'Users', users_path
+%li= link_to 'Subjects', subjects_path
+%li= link_to 'Professors', professors_path
