Check admin presence in professor controller

--- a/app/views/professors/index.html.haml
+++ b/app/views/professors/index.html.haml
@@ -11,16 +11,16 @@
       %th
 
   %tbody
-    - @professors.each do |professor|
+    - professors.each do |professor|
       %tr
         %td= professor.first_name
         %td= professor.last_name
         %td= professor.title
         %td= link_to 'Show', professor
-        - if user_admin?
+        - if admin?
           %td= link_to 'Edit', edit_professor_path(professor)
           %td= link_to 'Destroy', professor, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
-- if user_admin?
+- if admin?
   = link_to 'New Professor', new_professor_path
