fixed relation professors-subjects

--- a/app/views/subjects/index.html.haml
+++ b/app/views/subjects/index.html.haml
@@ -10,6 +10,9 @@
       %th
       %th
 
+  - if current_user.admin?
+    = link_to "Add new subject", new_subject_path
+
   %tbody
     - subjects.each do |subject|
       %tr
