--- a/app/views/professors/show.html.haml
+++ b/app/views/professors/show.html.haml
@@ -2,14 +2,14 @@
 
 %p
   %b First name:
-  = @professor.first_name
+  = professor.first_name
 %p
   %b Last name:
-  = @professor.last_name
+  = professor.last_name
 %p
   %b Title:
-  = @professor.title
+  = professor.title
 
-= link_to 'Edit', edit_professor_path(@professor)
+= link_to 'Edit', edit_professor_path(professor)
 \|
 = link_to 'Back', professors_path
