--- a/app/views/comments/show.html.haml
+++ b/app/views/comments/show.html.haml
@@ -2,8 +2,8 @@
 
 %p
   %b Content:
-  = @comment.content
+  = comment.content
 
-= link_to 'Edit', edit_comment_path(@comment)
+= link_to 'Edit', edit_comment_path(comment)
 \|
 = link_to 'Back', comments_path
