--- a/app/views/professors/show.html.haml
+++ b/app/views/professors/show.html.haml
@@ -9,7 +9,13 @@
 %p
   %b Title:
   = professor.title
-
+  
+%p
+  %b Comments:
+  = professor.comments
+%p
+  %b Add comment:
+  = render 'comments/form'
 = link_to 'Edit', edit_professor_path(professor)
 \|
 = link_to 'Back', professors_path
