--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <div class="column">
       <table class="table">
         <tbody>
-          <% @users.each do |user| %>
+          <% users.each do |user| %>
             <tr>
               <%= render user %>
             </tr>
