--- a/app/views/subjects/show.html.haml
+++ b/app/views/subjects/show.html.haml
@@ -13,3 +13,6 @@
 = link_to 'Edit', edit_subject_path(subject)
 \|
 = link_to 'Back', subjects_path
+
+%p= link_to "Add new subject item", new_subject_subject_item_path(subject.id)
+	
