--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,8 @@
     %title= content_for?(:title) ? yield(:title) : 'Stud Helper'
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Stud Helper'}"}
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Arvo', media: 'all'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Roboto:300', media: 'all'
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
@@ -12,4 +14,4 @@
       = render 'layouts/navigation'
     %main{:role => "main"}
       = render 'layouts/messages'
-      = yield
+      .container= yield
