--- a/app/views/subject_items/index.html.haml
+++ b/app/views/subject_items/index.html.haml
@@ -12,5 +12,6 @@
     - subject.subject_items.each do |subject|
       %tr
         %td= subject.description
+        %td= link_to subject.item.identifier, subject.item.url
 
 %br
