--- a/app/views/subjects/index.html.haml
+++ b/app/views/subjects/index.html.haml
@@ -10,7 +10,7 @@
       %th
       %th
 
-  - if current_user.admin?
+  - if current_user && current_user.admin?
     = link_to "Add new subject", new_subject_path, class: "btn btn-primary"
 
   %tbody
@@ -19,9 +19,9 @@
         %td= subject.name
         %td= subject.short_name
         %td= subject.description
-        %td= link_to 'Show', subject
-        - if current_user.admin?
-          %td= link_to 'Edit', edit_subject_path(subject)
-          %td= link_to 'Destroy', subject, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        %td= link_to 'Show', subject, class: "btn btn-primary"
+        - if current_user && current_user.admin?
+          %td= link_to 'Edit', edit_subject_path(subject), class: "btn btn-primary"
+          %td= link_to 'Destroy', subject, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "btn btn-primary"
 
 %br
