styled nav elems on hover

--- a/app/views/subjects/show.html.haml
+++ b/app/views/subjects/show.html.haml
@@ -14,7 +14,7 @@
 \|
 = link_to 'Back', subjects_path
 
-%p= link_to 'Show all items', subject_subject_items_path(subject.id)
+%p= link_to 'Show all items', subject_subject_items_path(subject.id), class: "btn btn-primary"
 
-%p= link_to "Add new subject item", new_subject_subject_item_path(subject.id)
+%p= link_to "Add new subject item", new_subject_subject_item_path(subject.id), class: "btn btn-primary"
 	
