--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,9 +16,9 @@
 
 $font: Roboto !important;
 
-$base-color: #00afd6;
-$background-color: #e4f7fb;
-$secondary-color: #c5eef7;
+$base-color: #00d660;
+$background-color: #e4fbef;
+$secondary-color: #fff;
 
 $site-width: 900px;
 
