--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,6 @@
 <h3>Welcome</h3>
 <p><%= link_to 'users:', users_path %> <%= User.count %> registered</p>
+
+<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+<%= line_chart User.group_by_hour(:created_at).count, library: {vAxis: {title: "Users"}} %>
+<%= column_chart Subject.group_by_day(:created_at).count, library: {vAxis: {title: "Subjects"}} %>
