Add social signup buttons

--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,8 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{provider.to_s.titleize}", omniauth_authorize_path(resource_name, provider) %><br />
+    <a href="<%= omniauth_authorize_path(resource_name, provider) %>", class="btn btn-social btn-<%= provider.to_s %>">
+      <i class="fa fa-<%= provider.to_s %>"></i>  Sign in with <%= provider.to_s.titleize %>
+    </a>
   <% end -%>
 <% end -%>
