--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,8 @@
  *
  *= require_tree .
  *= require_self
+ *= require bootstrap-social
+ *= require font-awesome
  */
 
 $font: Roboto !important;
@@ -87,4 +89,8 @@ main {
   max-width: $site-width;
   margin: 30px auto 0;
   border-radius: 0;
+}
+
+.btn.btn-social:visited {
+  color: white;
 }
