--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for [professor, comment] do |f|
+= simple_form_for([professor, comment], remote: true) do |f|
   = f.error_notification
 
   .form-inputs
