--- a/app/views/professors/show.html.haml
+++ b/app/views/professors/show.html.haml
@@ -28,7 +28,7 @@
 
 %p
   %b Comments:
-%table
+%table#comments
   - professor.comments.each do |comment|
     %tr
       %td= comment.user.name
@@ -37,6 +37,6 @@
   %b Add comment:
   = render 'comments/form'
 
-= link_to 'Edit', edit_professor_path(professor)
-\|
-= link_to 'Back', professors_path
+= button_to 'Edit', edit_professor_path(professor)
+
+= button_to 'Back', professors_path
