--- a/app/views/subjects/edit.html.haml
+++ b/app/views/subjects/edit.html.haml
@@ -2,6 +2,5 @@
 
 = render 'form'
 
-= link_to 'Show', subject
-\|
-= link_to 'Back', subjects_path
+= button_to 'Show', subject
+= button_to 'Back', subjects_path
