--- a/app/views/subjects/show.html.haml
+++ b/app/views/subjects/show.html.haml
@@ -10,11 +10,10 @@
   %b Description:
   = subject.description
 
-= link_to 'Edit', edit_subject_path(subject)
-\|
-= link_to 'Back', subjects_path
+= button_to 'Edit', edit_subject_path(subject)
+= button_to 'Back', subjects_path
+%br
+=button_to 'Show all items', subject_subject_items_path(subject.id)
 
-%p= link_to 'Show all items', subject_subject_items_path(subject.id), class: "btn btn-primary"
-
-%p= link_to "Add new subject item", new_subject_subject_item_path(subject.id), class: "btn btn-primary"
+=button_to "Add new subject item", new_subject_subject_item_path(subject.id)
 	
