--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,2 +1,2 @@
-<td><%= link_to user.name, user %></td>
-<td><%= link_to user.email, user %></td>
+<td><%= button_to user.name, user %></td>
+<td><%= button_to user.email, user %></td>
