Add professor pagination

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -110,7 +110,7 @@ form {
   .comment_header {
     padding-bottom: 5px;
     .comment_author {
-      font-style: bold;
+      font-weight: bold;
     }
     .comment_date {
       float:right;
