--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,6 +1,7 @@
 %h3 User
-.col-md-3.pull-left
-  = image_tag user.picture.url if user.picture?
+- if user.picture?
+  .col-md-3.pull-left
+    = image_tag user.picture.url
 .col-md-9
   %p
     Name: #{user.name if user.name}
