--- a/app/views/subjects/_search_form.html.haml
+++ b/app/views/subjects/_search_form.html.haml
@@ -2,5 +2,4 @@
 	= f.label "Search for subject:"
 	= f.text_field :search_token, class: "form-control", placeholder: "Search for subject"
 	%br
-	= f.submit "Search", class: "btn btn-primary"
-%br
+	= f.submit "Search", class: "btn btn-default"
