--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -2,11 +2,14 @@
 <p><%= link_to 'users:', users_path %> <%= User.count %> registered</p>
 
 <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-<% if User.count != 0 %>
-	<%= line_chart User.group_by_day(:created_at).count, library: {vAxis: {title: "Users"}, :colors => ["#00d660"]} %>
+<% if SubjectItem.count != 0 %>
+	<%= line_chart SubjectItem.group_by_day(:created_at).count, library: {vAxis: {title: "Files"}, :colors => ["#00d660"]} %>
 <% end %>
 <% if Subject.count != 0 %>
 	<%= column_chart Subject.group_by_day(:created_at).count, library: {vAxis: {title: "Subjects"}, :colors => ["#00d660"]} %>
+<% end %>
+<% if User.count != 0 %>
+	<%= line_chart User.group_by_day(:created_at).count, library: {vAxis: {title: "Users"}, :colors => ["#00d660"]} %>
 <% end %>
 <% if Professor.count != 0 %>
 	<%= line_chart Professor.group_by_day(:created_at).count, library: {vAxis: {title: "Professors"}, :colors => ["#00d660"]} %>
