--- a/app/views/subjects/_search_form.html.haml
+++ b/app/views/subjects/_search_form.html.haml
@@ -1,5 +1,4 @@
-= form_for subjects_path, method: :get do |f|
+= form_for subjects_path, html: {class: "form-inline"}, method: :get do |f|
 	= f.label "Search for subject:"
 	= f.text_field :search_token, class: "form-control", placeholder: "Search for subject"
-	%br
 	= f.submit "Search", class: "btn btn-default"
