--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,7 +24,8 @@
 <% end %>
 
 <h3>Cancel my account</h3>
+<div class="pagination" style="padding-left:15px;">
+Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= button_to "Back", :back %>
+<%= link_to "Back", :back %>
+</div>
